Fix scaling with offset, more useable/visible slider

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -180,16 +180,16 @@ input[type=range] {
   padding: 0;
   width:   100%;
   border:  0px;
+  background-color: transparent !important;
 }
 
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  border:       0px;
-  border-left:  1px solid rgb(52,58,64);
-  border-right: 1px solid rgb(52,58,64);
-  background:   #606060;
-  height:       36px;
-  width:        40px;
+  background: #8A8A8A;
+  border:     1px solid rgb(0,0,0);
+  height:     31px;
+  width:      14px;
+  margin-top: -12px;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
@@ -197,7 +197,7 @@ input[type=range]::-webkit-slider-runnable-track {
   border:        0px;
   border-top:    1px solid rgb(52,58,64);
   border-bottom: 1px solid rgb(139,0,0);
-  height:        38px;
+  height:        10px;
   width:         100%;
 }
 
